...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/image_moneybag"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="50dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/money_bag" />

        <ImageButton
            android:id="@+id/image_bank"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/bank" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/image_logout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:padding="5dp"
        android:scaleType="fitCenter"
...
